--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.5",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.5",
     "sass": "^1.57.1"
   }
 }
