--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -1,14 +1,14 @@
 {
-    "name": "",
-    "short_name": "",
+    "name": "Rafal Nawojczyk Portfolio website",
+    "short_name": "Portfolio",
     "icons": [
         {
-            "src": "/public/favicon/android-chrome-192x192.png",
+            "src": "/favicon/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/public/favicon/android-chrome-256x256.png",
+            "src": "/favicon/android-chrome-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         }
