--- a/public/favicon/manifest.json
+++ b/public/favicon/manifest.json
@@ -1,5 +1,5 @@
 {
-    "start_url": "/",
+    "start_url": "/favicon/",
     "scope": "/",
     "name": "Rafal Nawojczyk Portfolio website",
     "short_name": "Portfolio Page",
