--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@next/font": "13.1.1",
+    "@next/mdx": "^14.2.4",
+    "@types/mdx": "^2.0.13",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -24,6 +28,7 @@
   },
   "devDependencies": {
     "@types/react-transition-group": "^4.4.5",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "shiki": "^1.10.1"
   }
 }
