--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "payload": "3.0.0-beta.61",
         "react": "19.0.0-rc.0",
         "react-dom": "19.0.0-rc.0",
-        "schema-dts": "^1.1.2"
+        "schema-dts": "^1.1.2",
+        "sharp": "^0.33.4"
     },
     "devDependencies": {
         "@types/escape-html": "^1.0.4",
