--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "payload": "3.0.0-beta.61",
         "react": "19.0.0-rc.0",
         "react-dom": "19.0.0-rc.0",
+        "sass": "^1.81.1",
         "schema-dts": "^1.1.2",
         "sharp": "^0.33.4"
     },
